--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
             <li>contact</li>
         </ul>
     </nav>
-
-<img onmouseover="function1(this)" onmouseout="function2(this)" src="name.jpeg" alt="image">
+<img onmouseover="function1(this)" onmouseout="function2(this)" src="mine.jpg" alt="image">
 <h1>ANONYMOUS</h1>
 <p>I'm anonymous</p>
-<a href="#">link</a>
-<a href="#">link</a>
-<a href="#">link</a>
+<a href="https://Github.com">Github</a>
+<a href="https://facebook.com">facebook</a>
+
+<script>
+    function function1(x)
+    {
+        x.style.height="200px";
+        x.style.width="200px";
+    }
+    function function2(y) 
+    {
+        y.style.height="100px";
+        y.style.width="100px";
+    }
+</script>
 </body>
 </html>
