--- a/onclick.html
+++ b/onclick.html
@@ -6,7 +6,8 @@
 <body>
     <p id="demo">before</p>
     <button onclick="function1()">click me</button>
-    <script>function function1()
+    <script>
+    function function1()
     {
         document.getElementById("demo").innerHTML="clicked";
     }
